Checkstyle + postman fix